# bounce-list

./: CMakeLists.txt  README.md  bounce-list.cpp  bounce-list.functions.json  bounce-list.schema.json  sbom.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/smtpd/src/config/: smtpd.yaml
.devcontainer/smtpd/src/files/: test.hsl
