CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("bounce-list" VERSION 2.0.0)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(LIBPCRE2 REQUIRED libpcre2-8)

# RPM/DEB and CENTOS7/CENTOS8/ROCKY9/UBU2004/UBU2204/UBU2404/AZURE3
IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt")
	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt OSRELEASE)
ELSEIF (EXISTS "/OSRELEASE.txt")
	FILE(STRINGS /OSRELEASE.txt OSRELEASE)
ELSE()
	MESSAGE(FATAL_ERROR "Missing OSRELEASE")
ENDIF()

IF (OSRELEASE MATCHES "CENTOS7")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "CENTOS8")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "ROCKY9")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "UBU2004")
	SET(CPACK_GENERATOR "DEB")
ELSEIF (OSRELEASE MATCHES "UBU2204")
	SET(CPACK_GENERATOR "DEB")
ELSEIF (OSRELEASE MATCHES "UBU2404")
	SET(CPACK_GENERATOR "DEB")
ELSEIF (OSRELEASE MATCHES "AZURE3")
	SET(CPACK_GENERATOR "RPM")
ELSE()
	MESSAGE(FATAL_ERROR "Invalid OSRELEASE")
ENDIF()

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -Wno-c++11-narrowing -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")

IF (OSRELEASE MATCHES "AZURE3")
	INCLUDE_DIRECTORIES(
		/external/include
	)
	LINK_DIRECTORIES(
		/external/lib
	)
ENDIF()

ADD_LIBRARY(bounce-list SHARED
	bounce-list.cpp
)

TARGET_LINK_LIBRARIES(bounce-list
	${LIBPCRE2_LIBRARIES}
	csv
)

SET_TARGET_PROPERTIES(bounce-list PROPERTIES PREFIX "")

INCLUDE_DIRECTORIES(
	/opt/halon/include
)

IF(EXISTS "/etc/os-release")
	EXECUTE_PROCESS(COMMAND "sed" "-ne" "s/^ID=\"\\?\\([a-z]\\+\\)\"\\?$/\\1/p" "/etc/os-release" OUTPUT_VARIABLE OS_RELEASE_ID OUTPUT_STRIP_TRAILING_WHITESPACE)
	EXECUTE_PROCESS(COMMAND "sed" "-ne" "s/^VERSION_ID=\"\\?\\([0-9\\.]\\+\\)\"\\?$/\\1/p" "/etc/os-release" OUTPUT_VARIABLE OS_RELEASE_VERSION_ID OUTPUT_STRIP_TRAILING_WHITESPACE)
	EXECUTE_PROCESS(COMMAND "uname" "-m" OUTPUT_VARIABLE OS_RELEASE_ARCH OUTPUT_STRIP_TRAILING_WHITESPACE)
	SET(SYSTEM_NAME "${OS_RELEASE_ID}-${OS_RELEASE_VERSION_ID}-${OS_RELEASE_ARCH}")
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/bounce-list.so DESTINATION plugins)
INSTALL(FILES bounce-list.schema.json DESTINATION share/plugins)
INSTALL(FILES bounce-list.functions.json DESTINATION share/plugins)

IF(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14.0") 
	FILE(CREATE_LINK "/opt/halon/plugins/bounce-list.so" "${CMAKE_CURRENT_BINARY_DIR}/bounce-list.so.link" SYMBOLIC)
ELSE()
	ADD_CUSTOM_TARGET(link_target ALL COMMAND ${CMAKE_COMMAND} -E create_symlink "/opt/halon/plugins/bounce-list.so" "${CMAKE_CURRENT_BINARY_DIR}/bounce-list.so.link")
ENDIF()

IF (OSRELEASE MATCHES "AZURE3")
	INSTALL(FILES /external/lib/libcsv.so.3.0.2 DESTINATION lib RENAME libcsv.so.3)
	INSTALL(FILES /tmp/halon/libcsv-3.0.3/COPYING.LESSER DESTINATION share/doc/plugins/bounce-list RENAME LICENSE.libcsv)
ENDIF()

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/bounce-list.so.link" DESTINATION plugins/autoload/smtpd RENAME bounce-list.so)
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/bounce-list.so.link" DESTINATION plugins/autoload/hsh RENAME bounce-list.so)

INSTALL(FILES "LICENSE" DESTINATION share/doc/plugins/bounce-list)

SET(CMAKE_INSTALL_PREFIX "/opt/halon")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")

IF (CPACK_GENERATOR MATCHES "DEB")
	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS OFF)
	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.10), libpcre2-8-0")
	SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm")
ENDIF()
IF (CPACK_GENERATOR MATCHES "RPM")
	IF (OSRELEASE MATCHES "AZURE3")
		SET(CPACK_RPM_PACKAGE_AUTOREQPROV OFF)
		SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10, libpcre2-8-0")
	ELSE()
		SET(CPACK_RPM_PACKAGE_AUTOREQPROV OFF)
		SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.10, libcsv >= 3.0.3, pcre2")
	ENDIF()
	SET(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
	SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postrm")
ENDIF()

SET(CPACK_PACKAGE_NAME "halon-extras-bounce-list")
SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Halon extras bounce-list plugin")
SET(CPACK_PACKAGE_DESCRIPTION "Halon extras bounce-list plugin")
SET(CPACK_PACKAGE_CONTACT "Halon support@halon.io")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PROJECT_VERSION}-${SYSTEM_NAME}")

SET(CPACK_DEBIAN_PACKAGE_SECTION "mail")

INCLUDE(CPack)
